--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,8 @@ services:
       POSTGRES_DB: ${DB_DATABASE}
       TZ: ${APP_TZ}
     volumes:
-      - postgres-data:/var/lib/postgresql/data
+      - pg-data:/var/lib/postgresql/data
 
 volumes:
-  postgres-data:
+  pg-data:
+    external: true
