:memo: doc: update .env.example file

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,10 @@ DB_DATABASE=go-auth
 DB_USERNAME=user
 DB_PASSWORD=password
 DB_SSL_MODE=disable
+
+# JWT
+# AUTH
+AUTH_DRIVER=jwt
+JWT_SECRET=secret
+JWT_ACCESS_TOKEN_LIFETIME_SEC=43200
+JWT_REFRESH_TOKEN_EXPIRATION_SEC=86400
