:memo: doc: update .env.example

--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,9 @@ DB_USERNAME=user
 DB_PASSWORD=password
 DB_SSL_MODE=disable
 
-# JWT
+# HASH
+HASH_DRIVER=argon2
+
 # AUTH
 AUTH_DRIVER=jwt
 JWT_SECRET=secret
