:hammer: chore: add time form env to clean up token job

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,4 @@ AUTH_DRIVER=jwt
 JWT_SECRET=secret
 JWT_ACCESS_TOKEN_LIFETIME_SEC=43200
 JWT_REFRESH_TOKEN_EXPIRATION_SEC=86400
+CLEAN_TOKEN_DURATION=3600
