:hammer: chore: send the token with dto

--- a/.env.example
+++ b/.env.example
@@ -20,4 +20,5 @@ AUTH_DRIVER=jwt
 JWT_SECRET=secret
 JWT_ACCESS_TOKEN_LIFETIME_SEC=43200
 JWT_REFRESH_TOKEN_EXPIRATION_SEC=86400
+ACTIVE_TOKEN_NUMBER=5
 CLEAN_TOKEN_DURATION=3600
