:memo: doc: add some not for dev/prod

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,11 @@
+# Host should be empty for scale and nginx
 APP_NAME=Go-Auth
-APP_HOST=localhost
+APP_HOST=
 APP_PORT=2222
 APP_TZ=Asia/Tehran
 
 # Database
+# for local set DB_HOST=localhost for production set it to DB_HOST=postgres.${APP_NAME} (here APP_NAME is Go-Auth)
 DB_DRIVER=postgresql
 DB_HOST=go-auth.com
 DB_PORT=5432
