--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,11 @@ services:
     restart: unless-stopped
     ports:
       - "80:80"
+      - "443:443"
     volumes:
       - ./build/docker/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./build/certs/nginx/go-auth.crt:/etc/nginx/ssl/go-auth.crt
+      - ./build/certs/nginx/go-auth.key:/etc/nginx/ssl/go-auth.key
     networks:
       - go-auth
     depends_on:
